Initializing first page files, login controller and router

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Audioplayer</title>
 </head>
 <body>
-    <script src="main.ts" type="module"></script>
+    <script src="main.ts" type="module" defer></script>
 </body>
 </html>
